--- a/package.json
+++ b/package.json
@@ -1,49 +1,37 @@
 {
-  "name": "@chainsafe/chainbridge-contracts",
-  "version": "2.0.0",
+  "name": "stakerdeploy",
+  "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "repository": "https://github.com/ChainSafe/chainbridge-solidity.git",
-  "files": [
-    "dist"
-  ],
-  "directories": {
-    "test": "test"
-  },
+  "main": "index.js",
   "scripts": {
-    "compile": "truffle compile",
-    "build": "rollup -c",
-    "publish-package": "npm run generate-types && npm run build && npm publish",
-    "generate-types": "npm run generate-types:ethers",
-    "generate-types:ethers": "npx typechain \"build/contracts/Bridge.json\" --target=ethers-v5 --outDir src/ethers",
-    "test": "echo \\\\\\\"Error: no test specified\\\\\\\" && exit 1"
+    "compile": "hardhat compile",
+    "lint": "eslint . --ext .ts",
+    "prettier": "prettier --write 'contracts/**/*.sol'",
+    "size-contracts": "hardhat compile && hardhat size-contracts",
+    "test": "hardhat test",
+    "clear-cache": "rm -rf artifacts/ cache/ typechain/"
   },
-  "author": "Chainsafe Systems",
-  "license": "GPL-3.0-only",
+  "author": "Parami",
+  "license": "MIT",
   "devDependencies": {
-    "@codechecks/client": "^0.1.10",
-    "coveralls": "^3.0.11",
-    "ethers": "^4.0.40",
-    "ganache-cli": "^6.9.1",
-    "solidity-coverage": "^0.7.4",
-    "truffle-assertions": "^0.9.2",
-    "typechain": "^3.0.0",
-    "@typechain/ethers-v5": "^2.0.0",
-    "@openzeppelin/contracts": "^3.4.2",
-    "commander": "^7.0.0",
-    "rimraf": "^3.0.2",
-    "truffle": "^5.1.15",
-    "@rollup/plugin-babel": "^5.3.0",
-    "rollup": "^2.56.3",
-    "@babel/core": "^7.12.3",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.1.1",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-peer-deps-external": "^2.2.3",
-    "typescript": "^4.2.3"
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@openzeppelin/hardhat-upgrades": "^1.12.0",
+    "ethers": "^5.5.1",
+    "ts-node": "^10.4.0"
   },
-  "peerDependencies": {
-    "ethers": ">= 5.0.0"
+  "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^2.1.8",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "3.4.1-solc-0.7-2",
+    "@openzeppelin/contracts-upgradeable": "3.4.1-solc-0.7-2",
+    "@typechain/ethers-v5": "^8.0.4",
+    "@typechain/hardhat": "^3.0.0",
+    "@uniswap/v3-core": "^1.0.0",
+    "@uniswap/v3-periphery": "^1.0.1",
+    "dotenv": "^10.0.0",
+    "hardhat": "^2.7.0",
+    "solidity-coverage": "^0.7.17",
+    "typechain": "^6.0.5",
+    "typescript": "^4.5.2"
   }
 }
